--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <h2>5. Een branch rebasen</h2>
                         <p>
                             Status: 
-                            <strong id="status">Normaal</span>
+                            <strong id="status">Flex</span>
                         </p>
                     </div>
                     <div class="meta">
